# django-cms

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
apps/blog/: admin.py  api_urls.py  models.py  routers.py  serializers.py  tests.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/blog/templates/blog/: post_detail.html  post_list.html
apps/core/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/core/fixtures/: initial_settings.json
apps/core/migrations/: 0001_initial.py
django_cms/: asgi.py  urls.py  wsgi.py
django_cms/settings/: __init__.py  base.py  drf.py
