[tool.poetry]
name = "poetry init"
version = "0.1.0"
description = "Django CMS"
authors = ["Milad Khoshdel <miladkhoshdel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"
python-decouple = "^3.8"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
